@@ -3,6 +3,7 @@ gscrot (0.36~ppa1) gutsy; urgency=low
   * added functionalities to "session collection"
     --remove screenshots from session (but do not delete them)
 		--reopen screenshot with specified program
+		--rename screenshot
   * new arrangement of settings area
   * new feature -- reduce color depth --
   * added dependency libimage-magick-perl
